--- a/yes.html
+++ b/yes.html
@@ -8,7 +8,7 @@
     <body>
         <div class="body">
             
-            <h2> you're coming? oh, thank goodness! <br> hop in for a ride.</h2>
+            <h2> you're coming? oh, thank goodness! <br> hop in for a treat.</h2>
             <div class="gif-animation">
                 <img id="gif" src="https://media1.tenor.com/m/arqlNu8gyJYAAAAC/cat-cat-jumping.gif" alt="GIF">
             </div>
