--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
             </div>
 
             <div class="button-row" style="margin-left: 1rem">
-                <a class="button" href="yes.html" id="yes">Of Course!</a>
-                <a class="button" href="no.html" id="temp">Hell No</a> <br>
-                <a class="button" href="no.html" id="no" style="display: none">Hell No</a>
+                <a class="button" href="yes.html" id="yes">absolutely!</a>
+                <a class="button" href="no.html" id="temp">hell No</a> <br>
+                <a class="button" href="no.html" id="no" style="display: none">hell No</a>
             </div>
 
             <audio id="background-music" loop>
