--- a/no.html
+++ b/no.html
@@ -13,7 +13,7 @@
                 <img id="gif" src="https://media1.tenor.com/m/t7_iTN0iYekAAAAd/sad-sad-cat.gif" alt="GIF">
             </div>
             <div class="button-row">
-                <a class="button" href="yes.html" class="btn" id="yes">Absolutely</a>
+                <a class="button" href="yes.html" class="btn" id="yes">absolutely!</a>
                 <button class="button" id="no">hell no</button>
             </div>
 
