--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
             <div class="button-row" style="margin-left: 1rem">
                 <a class="button" href="yes.html" id="yes">absolutely!</a>
-                <a class="button" href="no.html" id="temp">hell No</a> <br>
+                <a class="button" href="no.html" id="temp">hell no</a> <br>
                 <a class="button" href="no.html" id="no" style="display: none">hell no </a>
             </div>
 
