--- a/yes.html
+++ b/yes.html
@@ -13,7 +13,7 @@
                 <img id="gif" src="https://media1.tenor.com/m/arqlNu8gyJYAAAAC/cat-cat-jumping.gif" alt="GIF">
             </div>
             <div class="button-row">
-                <a class="yay-btn" href="yes.html" id="yes">yay, let's go!</a>
+                <a class="yay-btn" href="gallery/index.html" id="yes">yay, let's go!</a>
             </div>
 
             <audio id="background-music" loop>
