--- a/gallery/index.html
+++ b/gallery/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <div id="letter-container">
-        <div class="letter" data-visible="true">Hi, loveee!</div>
+        <div class="letter" data-visible="true">Hi, love!</div>
         <div class="letter" data-visible="false">Happy Valentines Day to You! </div>
         <div class="letter" data-visible="false">I just want to say that I am very grateful for you.</div>
         <div class="letter" data-visible="false">You're the most significant person in my life, and that will never change.</div>
