--- a/gallery/index.html
+++ b/gallery/index.html
@@ -13,7 +13,8 @@
         <div class="letter" data-visible="false">I just want to say that I am very grateful for you.</div>
         <div class="letter" data-visible="false">You're the most significant person in my life, and that will never change.</div>
         <div class="letter" data-visible="false">You know it, we both do. </div>
-        <div class="letter" data-visible="false">I'm sorry if I sometimes cause you headaches, if I'm not always as affectionate as you'd like, or if I'm frequently caught up in my own world. </div>
+        <div class="letter" data-visible="false">I'm sorry if I sometimes cause you headaches, </div>
+        <div class="letter" data-visible="false">if I'm not always as affectionate as you'd like, or if I'm frequently caught up in my own world. </div>
         <div class="letter" data-visible="false">I'll do everything to keep you by my side because you're the one for me.</div>
         <div class="letter" data-visible="false">There will be no one else.</div>
         <div class="letter" data-visible="false">I love everything about you, </div>
